Update source file template.json

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -1,13 +1,17 @@
 {
 	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\English",
 
-	"No POST data.": "No POST data.",
-
 	"The music you were looking for cannot be found.": "The music you were looking for cannot be found.",
 
-	"Please enter your username! ": "Please enter your username! ",
-	"Please enter your password! ": "Please enter your password! ",
-	"Incorrect username or password.": "Incorrect username or password.",
+	"No reset data.": "No reset data.",
+
+	"Follow": "Follow",
+	"Unfollow": "Unfollow",
+
+	" The new passwords aren't identical.": " The new passwords aren't identical.",
+	"Your current password is incorrect.": "Your current password is incorrect.",
+
+	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
 
 	"Blank username.": "Blank username.",
 	"Blank email.": "Blank email.",
@@ -19,206 +23,128 @@
 	"Email isn't valid.": "Email isn't valid.",
 	"Incorrect CAPTCHA. Please try again.": "Incorrect CAPTCHA. Please try again.",
 
-	"No reset data.": "No reset data.",
-
-	" The new passwords aren't identical.": " The new passwords aren't identical.",
-	"Your current password is incorrect.": "Your current password is incorrect.",
-
-	"Subscribe": "Subscribe",
-	"Unsubscribe": "Unsubscribe",
-
-	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
-	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
+	"No POST data.": "No POST data.",
 
 	"Your music is already uploading or has been uploaded.": "Your music is already uploading or has been uploaded.",
 	"Please wait 2 minutes before uploading again. If you've already uploaded a music, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a music, it is being processed.",
 
-	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
+	"Please enter your username! ": "Please enter your username! ",
+	"Please enter your password! ": "Please enter your password! ",
+	"Incorrect username or password.": "Incorrect username or password.",
 
-	"This feature is not ready for production.": "This feature is not ready for production.",
-	"Access Denied": "Access Denied",
+	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
+	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
 
-	"Videos": "Videos",
-	"Likes": "Likes",
-	"History": "History",
-	"Watch Later": "Watch Later",
-	"Spotlight": "Spotlight",
-	"No featured videos.": "No featured videos.",
-	"We were unable to complete the request, please try again later.": "We were unable to complete the request, please try again later.",
-	"Loading...": "Loading...",
-
-	"Sign up for a new squareBracket account": "Sign up for a new squareBracket account",
-	"Sign in": "Sign in",
-	"squareBracket Username": "squareBracket Username",
-	"Password": "Password",
-	"squareBracket": "squareBracket",
-	"Sign in to squareBracket with your squareBracket account": "Sign in to squareBracket with your squareBracket account",
-	"Sign in to squareBracket": "Sign in to squareBracket",
-	"Get full access to squareBracket with your account:": "Get full access to squareBracket with your account:",
-	"Upload and share your own videos": "Upload and share your own videos",
-	"Comment on and rate your favorite videos": "Comment on and rate your favorite videos",
-	"By squareBracket contributors": "By squareBracket contributors",
-
-	"About": "About",
-	"About squareBracket": "About squareBracket",
-	"Gamerappa squareBracket": "Gamerappa squareBracket",
-	"Version 2.0 (Build 47101)": "Version 2.0 (Build 47101)",
-	"The squareBracket website is open source on GitHub.": "The squareBracket website is open source on GitHub.",
-
-	"Admin": "Admin",
-	"All videos": "All videos",
-	"Approved videos": "Approved videos",
-
-	"Browse": "Browse",
-	"Videos from subscriptions": "Videos from subscriptions",
-	"Your subscriptions haven't uploaded videos yet.": "Your subscriptions haven't uploaded videos yet.",
-	"No uploaded videos.": "No uploaded videos.",
-
-	"Channels": "Channels",
-	"No users.": "No users.",
-
-	"Home": "Home",
-	"From my subscriptions": "From my subscriptions",
-	"Browse subscriptions": "Browse subscriptions",
-	"There are currently no videos from your subscriptions.": "There are currently no videos from your subscriptions.",
-	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
-	"Browse videos": "Browse videos",
-	"s": "s",
-	"%s subscriber%s": "%s subscriber%s",
-	"no": "no",
-	"%s view%s": "%s view%s",
-	"Welcome to squareBracket": "Welcome to squareBracket",
-	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
-	"News and updates": "News and updates",
-	"There are currently no updates.": "There are currently no updates.",
-	"Featured videos": "Featured videos",
-
-	"Login": "Login",
-	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
-	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
-	"Username": "Username",
-	"Back": "Back",
-	"Account passwords are hashed with bcrypt.": "Account passwords are hashed with bcrypt.",
-
-	"Register": "Register",
-	"E-mail": "E-mail",
-	"Display Name": "Display Name",
-	"Password (Again)": "Password (Again)",
-	"You must be 13 years or older to register to squareBracket.": "You must be 13 years or older to register to squareBracket.",
-
-	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
-	"Submit": "Submit",
-
-	"Search Results for %s": "Search Results for %s",
-	"No search results found.": "No search results found.",
-
-	"Settings": "Settings",
-	"Account": "Account",
-	"Profile": "Profile",
-	"Checkmark": "Checkmark",
-	"Account migrated from PokTube": "Account migrated from PokTube",
-	"Email address:": "Email address:",
-	"Security options": "Security options",
-	"Change Password": "Change Password",
-	"Current Password": "Current Password",
-	"Change": "Change",
-	"Other": "Other",
-	"Log out from all devices": "Log out from all devices",
-	"Profile settings": "Profile settings",
-	"Change the look and feel of your channel's page.": "Change the look and feel of your channel's page.",
-	"Profile picture": "Profile picture",
-	"Channel background image": "Channel background image",
-	"(Checkmark only)": "(Checkmark only)",
-	"Channel description": "Channel description",
-	"Description": "Description",
-	"Update": "Update",
-	"squareBracket Checkmark Program": "squareBracket Checkmark Program",
-	"Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.",
-	"Apply for Checkmark": "Apply for Checkmark",
-	"Made using Google Forms.": "Made using Google Forms.",
-
-	"Security": "Security",
-	"Username:": "Username:",
-	"Change the look of your channel's profile.": "Change the look of your channel's profile.",
-	"Channel background": "Channel background",
-	"Channel banner color": "Channel banner color",
-
-	"Upload": "Upload",
+	"Video": "Video",
 	"Upload video": "Upload video",
-	"Important": "Important",
-	"By uploading your videos onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your videos onto squareBracket, you acknowledge about the upload guidelines.",
-	"Video info": "Video info",
-	"Enter the title and description of your video.": "Enter the title and description of your video.",
-	"Title": "Title",
-	"Tags": "Tags",
-	"Video file": "Video file",
-	"Select the video file you want to upload.": "Select the video file you want to upload.",
-	"Upload Guidelines": "Upload Guidelines",
-	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.",
-	"Upload anyways": "Upload anyways",
+	"Music": "Music",
+	"Upload music": "Upload music",
 
-	"Checkmarked": "Checkmarked",
-	"Your profile has been successfully updated.": "Your profile has been successfully updated.",
-	"Uploaded by %s": "Uploaded by %s",
-	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
-	"About %s": "About %s",
-	"Last seen": "Last seen",
-	"Joined": "Joined",
-	"Subscriber%s": "Subscriber%s",
-	"Administrative Actions": "Administrative Actions",
-	"Generate password reset for %s": "Generate password reset for %s",
-
-	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
-	"Uploaded on %s": "Uploaded on %s",
-	"view%s": "view%s",
-	"subscriber%s": "subscriber%s",
-	"Edit video": "Edit video",
-	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
-	"Please sign in in order to comment.": "Please sign in in order to comment.",
-	"Comment": "Comment",
-	"Posting...": "Posting...",
-
-	"Sorry about that.": "Sorry about that.",
-
-	"Search": "Search",
-	"Change theme": "Change theme",
-	"My profile": "My profile",
-	"Sign off": "Sign off",
-	"Light": "Light",
-	"Dark": "Dark",
-	"Classic Light": "Classic Light",
-	"Classic Dark": "Classic Dark",
-	"Bootstrap": "Bootstrap",
+	"Sign in": "Sign in",
+	"Upload": "Upload",
+	"Search...": "Search...",
 	"By the squareBracket contributors": "By the squareBracket contributors",
 	"Users registered": "Users registered",
 	"Videos uploaded": "Videos uploaded",
 
-	"%s follower%s": "%s follower%s",
+	"Sorry about that.": "Sorry about that.",
 
-	"Upload music": "Upload music",
+	"Important": "Important",
 	"By uploading your music onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your music onto squareBracket, you acknowledge about the upload guidelines.",
 	"Music info": "Music info",
 	"Enter the title of your music.": "Enter the title of your music.",
+	"Title": "Title",
 	"Music file": "Music file",
 	"Select the music file you want to upload.": "Select the music file you want to upload.",
+	"Upload Guidelines": "Upload Guidelines",
+	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.",
+	"Upload anyways": "Upload anyways",
 
-	"Video": "Video",
-	"Music": "Music",
-	"Artwork": "Artwork",
-	"Upload artwork": "Upload artwork",
-
-	"Your profile settings have been successfully updated.": "Your profile settings have been successfully updated.",
-	"Generate password reset": "Generate password reset",
-
+	"%s follower%s": "%s follower%s",
+	"no": "no",
+	"%s view%s": "%s view%s",
 	"Not implemented": "Not implemented",
+	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
 
-	"About This Video": "About This Video",
-	"Published: %s": "Published: %s",
-	"Uploader:": "Uploader:",
+	"Register": "Register",
+	"Display Name": "Display Name",
+	"Username": "Username",
+	"Password": "Password",
+	"Password (Again)": "Password (Again)",
+
+	"Latest videos": "Latest videos",
+	"(Page %s)": "(Page %s)",
+	"Categories": "Categories",
+	"All": "All",
+	"Miscellanous": "Miscellanous",
+	"Entertainment": "Entertainment",
+	"Shitposting & Comedy": "Shitposting & Comedy",
+	"Gaming": "Gaming",
+	"News and Updates": "News and Updates",
+	"Lifestyle": "Lifestyle",
+	"Science and Technology": "Science and Technology",
+	"Archive Dump": "Archive Dump",
+	"There are no videos of that category. You could create one!": "There are no videos of that category. You could create one!",
+
+	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
+	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
+
+	"Video info": "Video info",
+	"Enter the title and description of your video.": "Enter the title and description of your video.",
+	" Title": " Title",
+	" Description": " Description",
+	" Tags": " Tags",
+	"Video file": "Video file",
+	"Select the video file you want to upload.": "Select the video file you want to upload.",
+	"Upload guidelines": "Upload guidelines",
+	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
+
+	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
+	"Edit video": "Edit video",
+	"Published on %s": "Published on %s",
 	"Category:": "Category:",
-	"Description:": "Description:",
+	"License:": "License:",
+	"Standard squareBracket License": "Standard squareBracket License",
+	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
+	"Please sign in in order to comment.": "Please sign in in order to comment.",
+	"Comment": "Comment",
 	"Explore More Videos": "Explore More Videos",
 
-	"views": "views"
+	"Settings": "Settings",
+	"Credentials": "Credentials",
+	"Email address": "Email address",
+	"Account migrated from PokTube": "Account migrated from PokTube",
+	"Change Password": "Change Password",
+	"Current Password (For verification)": "Current Password (For verification)",
+	"New Password": "New Password",
+	"Repeat new Password": "Repeat new Password",
+	"Customize your profile": "Customize your profile",
+	"Profile Picture": "Profile Picture",
+	"Custom color": "Custom color",
+	"About": "About",
+	"Markdown allowed.": "Markdown allowed.",
+	"Forum signature": "Forum signature",
+	"Options": "Options",
+	"Language": "Language",
+	"Save Changes": "Save Changes",
 
+	"Welcome,": "Welcome,",
+	"s": "s",
+	"Go to studio": "Go to studio",
+	"Welcome to squareBracket": "Welcome to squareBracket",
+	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
+	"Already have an account?": "Already have an account?",
+	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
+	"No uploaded videos.": "No uploaded videos.",
+	"What's new?": "What's new?",
+	"Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.": "Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.",
+	"We have introduced many new features! Including:": "We have introduced many new features! Including:",
+	"Forums": "Forums",
+
+	"views": "views",
+
+	"view%s": "view%s",
+
+	"This feature is not ready for production.": "This feature is not ready for production.",
+	"Access Denied": "Access Denied"
 }
