localize more strings

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -1,17 +1,13 @@
 {
 	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\English",
 
+	"No POST data.": "No POST data.",
+
 	"The music you were looking for cannot be found.": "The music you were looking for cannot be found.",
 
-	"No reset data.": "No reset data.",
-
-	"Follow": "Follow",
-	"Unfollow": "Unfollow",
-
-	" The new passwords aren't identical.": " The new passwords aren't identical.",
-	"Your current password is incorrect.": "Your current password is incorrect.",
-
-	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
+	"Please enter your username! ": "Please enter your username! ",
+	"Please enter your password! ": "Please enter your password! ",
+	"Incorrect username or password.": "Incorrect username or password.",
 
 	"Blank username.": "Blank username.",
 	"Blank email.": "Blank email.",
@@ -23,54 +19,26 @@
 	"Email isn't valid.": "Email isn't valid.",
 	"Incorrect CAPTCHA. Please try again.": "Incorrect CAPTCHA. Please try again.",
 
-	"No POST data.": "No POST data.",
+	"No reset data.": "No reset data.",
 
-	"Your music is already uploading or has been uploaded.": "Your music is already uploading or has been uploaded.",
-	"Please wait 2 minutes before uploading again. If you've already uploaded a music, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a music, it is being processed.",
+	" The new passwords aren't identical.": " The new passwords aren't identical.",
+	"Your current password is incorrect.": "Your current password is incorrect.",
 
-	"Please enter your username! ": "Please enter your username! ",
-	"Please enter your password! ": "Please enter your password! ",
-	"Incorrect username or password.": "Incorrect username or password.",
+	"Follow": "Follow",
+	"Unfollow": "Unfollow",
 
 	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
 	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
 
-	"Video": "Video",
-	"Upload video": "Upload video",
-	"Music": "Music",
-	"Upload music": "Upload music",
+	"Your music is already uploading or has been uploaded.": "Your music is already uploading or has been uploaded.",
+	"Please wait 2 minutes before uploading again. If you've already uploaded a music, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a music, it is being processed.",
 
-	"Sign in": "Sign in",
-	"Upload": "Upload",
-	"Search...": "Search...",
-	"By the squareBracket contributors": "By the squareBracket contributors",
-	"Users registered": "Users registered",
-	"Videos uploaded": "Videos uploaded",
+	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
 
 	"Sorry about that.": "Sorry about that.",
 
-	"Important": "Important",
-	"By uploading your music onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your music onto squareBracket, you acknowledge about the upload guidelines.",
-	"Music info": "Music info",
-	"Enter the title of your music.": "Enter the title of your music.",
-	"Title": "Title",
-	"Music file": "Music file",
-	"Select the music file you want to upload.": "Select the music file you want to upload.",
-	"Upload Guidelines": "Upload Guidelines",
-	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.",
-	"Upload anyways": "Upload anyways",
-
-	"%s follower%s": "%s follower%s",
-	"no": "no",
-	"%s view%s": "%s view%s",
-	"Not implemented": "Not implemented",
-	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
-
-	"Register": "Register",
-	"Display Name": "Display Name",
-	"Username": "Username",
-	"Password": "Password",
-	"Password (Again)": "Password (Again)",
+	"This feature is not ready for production.": "This feature is not ready for production.",
+	"Access Denied": "Access Denied",
 
 	"Latest videos": "Latest videos",
 	"(Page %s)": "(Page %s)",
@@ -86,29 +54,37 @@
 	"Archive Dump": "Archive Dump",
 	"There are no videos of that category. You could create one!": "There are no videos of that category. You could create one!",
 
+	"Welcome,": "Welcome,",
+	"s": "s",
+	"%s follower%s": "%s follower%s",
+	"no": "no",
+	"%s view%s": "%s view%s",
+	"Go to studio": "Go to studio",
+	"Welcome to squareBracket": "Welcome to squareBracket",
+	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
+	"Register": "Register",
+	"Already have an account?": "Already have an account?",
+	"Sign in": "Sign in",
+	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
+	"No uploaded videos.": "No uploaded videos.",
+	"What's new?": "What's new?",
+	"Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.": "Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.",
+	"We have introduced many new features! Including:": "We have introduced many new features! Including:",
+	"Forums": "Forums",
+	"Music": "Music",
+
 	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
 	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
+	"Username": "Username",
+	"Password": "Password",
 
-	"Video info": "Video info",
-	"Enter the title and description of your video.": "Enter the title and description of your video.",
-	" Title": " Title",
-	" Description": " Description",
-	" Tags": " Tags",
-	"Video file": "Video file",
-	"Select the video file you want to upload.": "Select the video file you want to upload.",
-	"Upload guidelines": "Upload guidelines",
-	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
+	"Display Name": "Display Name",
+	"Password (Again)": "Password (Again)",
 
-	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
-	"Edit video": "Edit video",
-	"Published on %s": "Published on %s",
-	"Category:": "Category:",
-	"License:": "License:",
-	"Standard squareBracket License": "Standard squareBracket License",
-	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
-	"Please sign in in order to comment.": "Please sign in in order to comment.",
-	"Comment": "Comment",
-	"Explore More Videos": "Explore More Videos",
+	"Reset Password": "Reset Password",
+	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
+	"New Password:": "New Password:",
+	"Repeat New Password:": "Repeat New Password:",
 
 	"Settings": "Settings",
 	"Credentials": "Credentials",
@@ -128,23 +104,75 @@
 	"Language": "Language",
 	"Save Changes": "Save Changes",
 
-	"Welcome,": "Welcome,",
-	"s": "s",
-	"Go to studio": "Go to studio",
-	"Welcome to squareBracket": "Welcome to squareBracket",
-	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
-	"Already have an account?": "Already have an account?",
-	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
-	"No uploaded videos.": "No uploaded videos.",
-	"What's new?": "What's new?",
-	"Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.": "Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.",
-	"We have introduced many new features! Including:": "We have introduced many new features! Including:",
-	"Forums": "Forums",
+	"Upload": "Upload",
+	"Upload video": "Upload video",
+	"Video info": "Video info",
+	"Enter the title and description of your video.": "Enter the title and description of your video.",
+	" Title": " Title",
+	" Description": " Description",
+	" Tags": " Tags",
+	"Video file": "Video file",
+	"Select the video file you want to upload.": "Select the video file you want to upload.",
+	"Upload guidelines": "Upload guidelines",
+	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
 
+	"Upload music": "Upload music",
+	"Important": "Important",
+	"By uploading your music onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your music onto squareBracket, you acknowledge about the upload guidelines.",
+	"Music info": "Music info",
+	"Enter the title of your music.": "Enter the title of your music.",
+	"Title": "Title",
+	"Music file": "Music file",
+	"Select the music file you want to upload.": "Select the music file you want to upload.",
+	"Upload Guidelines": "Upload Guidelines",
+	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.",
+	"Upload anyways": "Upload anyways",
+
+	"Video": "Video",
+
+	"Not implemented": "Not implemented",
+	"Edit profile": "Edit profile",
+	"Marked all notifications as read.": "Marked all notifications as read.",
+	"Settings successfully saved!": "Settings successfully saved!",
+	"Welcome to your personal user page. Here, you can see and manage your uploaded content, customize your profile, and edit your settings.": "Welcome to your personal user page. Here, you can see and manage your uploaded content, customize your profile, and edit your settings.",
+	"Edit my settings": "Edit my settings",
+	"View my private messages": "View my private messages",
+	"View user page as viewer": "View user page as viewer",
+	"Log out": "Log out",
+	"Admin panel": "Admin panel",
+	"Notifications": "Notifications",
+	"No new notifications!": "No new notifications!",
+	"Mark all as read": "Mark all as read",
+	"About this user": "About this user",
+	"View threads": "View threads",
+	"Show posts": "Show posts",
+	"Send private message": "Send private message",
+	"Generate password reset for user": "Generate password reset for user",
+	"Edit forum permissions": "Edit forum permissions",
+	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
+
+	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
+	"Edit video": "Edit video",
+	"Like": "Like",
+	"Published on %s": "Published on %s",
+	"Category:": "Category:",
+	"License:": "License:",
+	"Standard squareBracket License": "Standard squareBracket License",
 	"views": "views",
+	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
+	"Please sign in in order to comment.": "Please sign in in order to comment.",
+	"Comment": "Comment",
+	"Explore More Videos": "Explore More Videos",
+	"More videos from %s": "More videos from %s",
 
-	"view%s": "view%s",
+	"Search...": "Search...",
+	"Home": "Home",
+	"Browse": "Browse",
+	"By the squareBracket contributors": "By the squareBracket contributors",
+	"Users registered": "Users registered",
+	"Videos uploaded": "Videos uploaded",
+	"Git Commit": "Git Commit",
 
-	"This feature is not ready for production.": "This feature is not ready for production.",
-	"Access Denied": "Access Denied"
+	"view%s": "view%s"
+
 }
